--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,102 @@
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: 'Work Sans', sans-serif;
     text-decoration: none;
+}
+
+/* primary button */
+.primary_btn {
+    padding: 20px 25px;
+    border: 0;
+    border-radius: 5px;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 23px;
+    color: #005FAC;
+}
+
+/* styles header */
+
+.banner_section {
+    height: 808px;
+    background-image: url("images/banner/banner3.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.banner_containt {
+    text-align: right;
+    padding-top: 245px;
+    padding-left: 870px;
+    padding-right: 230px
+}
+
+.banner_containt h2 {
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 700;
+    font-size: 65px;
+    line-height: 75px;
+    color: #FFFFFF;
+}
+
+.banner_containt p {
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    text-align: right;
+    color: #FFFFFF;
+    padding-bottom: 30px;
+    padding-top: 25px;
+}
+
+/* styles contrary */
+.contrary_contain {
+    display: flex;
+    width: 1070px;
+    margin: 130px auto;
+}
+
+.contrary_img {}
+
+.contrary_img img {
+    height: 720px;
+    width: 570px;
+}
+.contrary_description{
+    width: 420px;
+    padding-left: 90px;
+    padding-top: 260px;
+}
+.contrary_description h3 {
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 45px;
+    color: #151414;
+    padding-bottom: 25px;
+}
+
+.contrary_description p {
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 25px;
+    color: #444343;
+    padding-bottom: 16px;
+}
+
+.contrary_description ul {}
+
+.contrary_description ul li {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 27px;
+    color: #444343;
+    list-style: none;
+}
+.contrary_description ul li i{
+    color: #0de4eb;
+    margin-right: 10px;
 }
