--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,11 @@
     text-decoration: none;
 }
 
+main {
+    max-width: 1072px;
+    margin: 0 auto;
+}
+
 /* primary button */
 .primary_btn {
     padding: 20px 25px;
@@ -58,17 +63,18 @@
     margin: 130px auto;
 }
 
-.contrary_img {}
 
 .contrary_img img {
     height: 720px;
     width: 570px;
 }
-.contrary_description{
+
+.contrary_description {
     width: 420px;
     padding-left: 90px;
     padding-top: 260px;
 }
+
 .contrary_description h3 {
     font-family: 'Work Sans', sans-serif;
     font-weight: 700;
@@ -87,16 +93,61 @@
     padding-bottom: 16px;
 }
 
-.contrary_description ul {}
-
 .contrary_description ul li {
+    font-family: 'Work Sans', sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 27px;
     color: #444343;
     list-style: none;
 }
-.contrary_description ul li i{
+
+.contrary_description ul li i {
     color: #0de4eb;
     margin-right: 10px;
+}
+
+/* attention section */
+
+.attention_title {
+    text-align: center;
+    margin: 50px auto;
+}
+
+.attention_title h3 {
+    font-family: 'Inter', sans-serif;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 47px;
+    color: #151414;
+}
+
+.attention_containt {
+    display: flex;
+    gap: 55px;
+    justify-content: space-around;
+    margin: 50px 0px;
+}
+
+.attention_plan {
+    text-align: center;
+}
+
+.attention_plan h4 {
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 35px;
+    color: #151414;
+    margin: 15px auto;
+    text-align: center
+}
+
+.attention_plan p {
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 29px;
+    color: #737272;
+    text-align: center
 }
