--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ main {
     border: 0;
     border-radius: 5px;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 23px;
     color: #005FAC;
 }
@@ -107,7 +107,7 @@ main {
     margin-right: 10px;
 }
 
-/* attention section */
+/* styles attention */
 
 .attention_title {
     text-align: center;
@@ -150,4 +150,30 @@ main {
     line-height: 29px;
     color: #737272;
     text-align: center
+}
+
+/* styles gradien */
+.gradien {}
+
+.gradien_backgound {
+    width: 1140px;
+    height: 300px;
+    background: linear-gradient(90deg, #005FAC -0.83%, rgba(0, 95, 172, 0) 99.17%), url(images/watch.png);
+    border-radius: 8px;
+    margin: 130px auto;
+}
+
+.gradien_containt {
+    padding-top: 55px;
+    width: 460px;
+    padding-left: 65px;
+}
+
+.gradien_containt h3 {
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 47px;
+    color: #FFFFFF;
+    padding-bottom: 24px;
+
 }
